--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   fl_chart: ^0.68.0
   intl: ^0.19.0
+  flutter_colorpicker: ^1.0.0
   
 
 dev_dependencies:
@@ -22,6 +23,8 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-
-assets:
-  - assets/
+  assets:
+    - assets/Images/
+    
+  
+  
