--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
   sdk: '>=3.3.2 <4.0.0'
 
 dependencies:
+  expense_repository:
+    path: packages/expense_repository
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.6
@@ -14,6 +16,11 @@ dependencies:
   fl_chart: ^0.68.0
   intl: ^0.19.0
   flutter_colorpicker: ^1.0.0
+  firebase_core: ^3.1.0
+  bloc: ^8.1.4
+  flutter_bloc: ^8.1.6
+  equatable: ^2.0.5
+  uuid: ^4.4.0
   
 
 dev_dependencies:
